fix: Too small stat bar sizes
Stat bar sizes are too small and don't correctly show the difference
in stats between different pokemon. Adjusted column widths to show
differences for large breakpoints.

--- a/src/components/pokeStat.css
+++ b/src/components/pokeStat.css
@@ -1,3 +1,16 @@
 .bg-gray {
 	background: var(--bs-dark);
 }
+
+
+.bg-color {
+	background: var(--bs-primary)
+}
+
+.child-gray {
+	color: var(--bs-dark);
+}
+
+.child-color {
+	color: var(--bs-primary)
+}
